fix: submit buttons form left aligned
submit and cancel button left aligned on the end of the form

--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,7 @@ footer{
                 }
                 & .form-button{
                     margin-top: 10px;
+                    flex-grow: 1;
                     & input{
                         margin-right: 10px;
                         margin-top: 10px;
